--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div class="rafin">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam optio asperiores necessitatibus accusantium cum aliquam nam ex dolorum atque itaque neque quae assumenda inventore fuga vitae, aut unde nihil ad.</p>
+    </div>
     
 </body>
 </html>
