--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div class="rafin">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam optio asperiores necessitatibus accusantium cum aliquam nam ex dolorum atque itaque neque quae assumenda inventore fuga vitae, aut unde nihil ad.</p>
     </div>
+    <div class="image">
+        <img src="red.jpg" alt="">
+        
+    </div>
     
 </body>
 </html>
