--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
 
+    <div>
+        <p>rafin branch has been switched successfully</p>
+    </div>
     <div class="rafin">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam optio asperiores necessitatibus accusantium cum aliquam nam ex dolorum atque itaque neque quae assumenda inventore fuga vitae, aut unde nihil ad.</p>
     </div>
     <div class="image">
         <img src="red.jpg" alt="">
-        
+
     </div>
     
 </body>
